portal/src/app/volunteer/dashboard/subscribe-banner/component.scss
.overlay {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.75);
  z-index: 100;
}

.popup {
  position: fixed;
  top: 20%;
  left: 5%;
  right: 5%;
  background-color: white;
  padding: 2rem;
  box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.75);
  border-radius: 1rem;
  z-index: 101;
  text-align: center;
}

h2,
p {
  margin-bottom: 0.5rem;
  text-align: left;
}

button {
  width: 50%;
  margin: 1rem auto 0.25rem auto;
}

.error {
  margin-top: 1.25rem;
  margin-bottom: 0rem;
  text-align: left;

  p {
    font-size: 1rem;
    margin-bottom: 0rem;
  }

  strong {
    display: block;
    margin-top: 0.625rem;
  }

  ul {
    list-style-type: square;
    margin-left: 1rem;

    li {
      font-size: 1rem;
    }
  }
}

